# kpx

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
extension/: background.js  build.py  content.js  manifest.json  popup.js
extension/chrome/: manifest.json  popup.html  popup.js
extension/firefox/: manifest.json  popup.css
src/kpx/: auth.py  cli.py  client.py  db_manager.py  models.py  server.py  tray.py
