[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kpx"
version = "0.1.0"
description = "KeePass credential bridge — CLI + local server + browser extension"
requires-python = ">=3.10"
dependencies = [
    "click>=8.1",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "pykeepass>=4.1",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "httpx>=0.27",
    "pytest-asyncio>=0.24",
]

[project.scripts]
kpx = "kpx.cli:cli"

[tool.hatch.build.targets.wheel]
packages = ["src/kpx"]
